// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Plot Config Service create operation, puts data in database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Item": Object {
          "data": Object {
            "M": Object {
              "baz": Object {
                "L": Array [
                  Object {
                    "N": "1",
                  },
                  Object {
                    "N": "2",
                  },
                  Object {
                    "N": "3",
                  },
                ],
              },
              "foo": Object {
                "S": "bar",
              },
            },
          },
          "id": Object {
            "S": "1-plot1",
          },
        },
        "TableName": "plots-configs",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Test Plot Config Service delete operation, delete data from database 1`] = `[MockFunction]`;

exports[`Test Plot Config Service read operation, read data from database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Key": Object {
          "id": Object {
            "S": "1-plot1",
          },
        },
        "TableName": "plots-configs",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Test Plot Config Service update operation, update data in database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "ExpressionAttributeNames": Object {
          "#d": "data",
        },
        "ExpressionAttributeValues": Object {
          ":x": Object {
            "M": Object {
              "baz": Object {
                "L": Array [
                  Object {
                    "N": "1",
                  },
                  Object {
                    "N": "2",
                  },
                  Object {
                    "N": "3",
                  },
                ],
              },
              "foo": Object {
                "S": "bar",
              },
            },
          },
        },
        "Key": Object {
          "id": Object {
            "S": "1-plot1",
          },
        },
        "TableName": "plots-configs",
        "UpdateExpression": "set #d = :x",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
